--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: page
 <div>
     <div class="row text-center">
             <img src="assets/dadkin.jpg" class="cetner-block float-right" style="height: 250px"></div>
-    <p>Dadkin, an old Zoroastrian village with twin cypress trees</p>
+    <p>Dadkin, an old Zoroastrian village with twin cypress trees.</p>
 </div>
 <h1><a href="/projects/">projects</a> </h1>
 
