--- a/index.html
+++ b/index.html
@@ -53,29 +53,29 @@ layout: page
             <td></td><!--3-->
             <td></td><!--4-->
             <td></td><!--5-->
-            <td></td><!--6-->
-            <td></td><!--7-->
+            <td bgcolor="AFEEEE"></td><!--6-->
+            <td bgcolor="AFEEEE"></td><!--7-->
             <td></td><!--8-->
             <td></td><!--9-->
             <td></td><!--10-->
             <td></td><!--11-->
             <td></td><!--12-->
-            <td></td><!--13-->
-            <td></td><!--14-->
+            <td bgcolor="AFEEEE"></td><!--13-->
+            <td bgcolor="AFEEEE"></td><!--14-->
             <td></td><!--15-->
             <td></td><!--16-->
             <td></td><!--17-->
             <td>4</td><!--18-->
             <td>3</td><!--19-->
-            <td></td><!--20-->
-            <td>3</td><!--21-->
+            <td bgcolor="AFEEEE"></td><!--20-->
+            <td bgcolor="AFEEEE">3</td><!--21-->
             <td>5</td><!--22-->
             <td>3</td><!--23-->
             <td>2</td><!--24-->
             <td>2</td><!--25-->
             <td></td><!--26-->
-            <td></td><!--27-->
-            <td></td><!--28-->
+            <td bgcolor="AFEEEE"></td><!--27-->
+            <td bgcolor="AFEEEE"></td><!--28-->
             <td></td><!--29-->
             <td></td><!--30-->
             <td></td><!--31-->
@@ -85,35 +85,35 @@ layout: page
             <td>Feb</td>
             <td></td><!--1-->
             <td></td><!--2-->
-            <td></td><!--3-->
-            <td></td><!--4-->
+            <td bgcolor="AFEEEE"></td><!--3-->
+            <td bgcolor="AFEEEE"></td><!--4-->
             <td bgcolor="#D4AF37">6</td><!--5-->
             <td>3</td><!--6-->
             <td>4</td><!--7-->
             <td>2</td><!--8-->
             <td></td><!--9-->
-            <td></td><!--10-->
-            <td></td><!--11-->
+            <td bgcolor="AFEEEE"></td><!--10-->
+            <td bgcolor="AFEEEE"></td><!--11-->
             <td></td><!--12-->
             <td></td><!--13-->
             <td></td><!--14-->
             <td></td><!--15-->
             <td></td><!--16-->
-            <td></td><!--17-->
-            <td></td><!--18-->
+            <td bgcolor="AFEEEE"></td><!--17-->
+            <td bgcolor="AFEEEE"></td><!--18-->
             <td></td><!--19-->
             <td></td><!--20-->
             <td></td><!--21-->
             <td></td><!--22-->
             <td></td><!--23-->
-            <td></td><!--24-->
-            <td></td><!--25-->
+            <td bgcolor="AFEEEE"></td><!--24-->
+            <td bgcolor="AFEEEE"></td><!--25-->
             <td></td><!--26-->
             <td></td><!--27-->
             <td></td><!--28-->
-            <td></td><!--29-->
-            <td></td><!--30-->
-            <td></td><!--31-->
+            <td>-</td><!--29-->
+            <td>-</td><!--30-->
+            <td>-</td><!--31-->
             <td></td><!--sum/h-->
         </tr>
         </tbody>
