--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@ layout: page
 </div>
 
 <div class="row">
+    <ul>
+        <li>Plan the 6 hours in the morning and commit to it.</li>
+        <li>Track time on a paper.</li>
+        <li>At the end of the day, total and project specific sheets.</li>
+    </ul>
+</div>
+<div class="row">
     <h1>2018 (<a href="/projects/">projects</a>)</h1>
     <table class="table">
         <tbody>
