--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@ layout: page
 
 <div class="row">
     <ul>
-        <li>Plan the 6 hours in the morning and commit to it.</li>
-        <li>Track time on a paper.</li>
-        <li>At the end of the day, total and project specific sheets.</li>
+        <li>Devise the 6 hours plan first thing in the morning and commit to it.</li>
+        <li>Track time on a paper using 20 minutes chunks.</li>
+        <li>At the end of the day, update total and project specific sheets.</li>
     </ul>
 </div>
 <div class="row">
