--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@ layout: page
             <td></td><!--14-->
             <td></td><!--15-->
             <td>2</td><!--16-->
-            <td bgcolor="AFEEEE"></td><!--17-->
-            <td bgcolor="AFEEEE"></td><!--18-->
-            <td>4</td><!--19-->
+            <td bgcolor="AFEEEE">4</td><!--17-->
+            <td bgcolor="AFEEEE">1</td><!--18-->
+            <td></td><!--19-->
             <td></td><!--20-->
             <td></td><!--21-->
             <td></td><!--22-->
