--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ layout: page
             <td bgcolor="AFEEEE">4</td><!--17-->
             <td bgcolor="AFEEEE">1</td><!--18-->
             <td>5</td><!--19-->
-            <td></td><!--20-->
+            <td bgcolor="#D4AF37">7</td><!--20-->
             <td></td><!--21-->
             <td></td><!--22-->
             <td></td><!--23-->
