--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ layout: page
             <td bgcolor="AFEEEE">1</td><!--18-->
             <td>5</td><!--19-->
             <td bgcolor="#D4AF37">7</td><!--20-->
-            <td></td><!--21-->
+            <td bgcolor="#D4AF37">7.5</td><!--21-->
             <td></td><!--22-->
             <td></td><!--23-->
             <td bgcolor="AFEEEE"></td><!--24-->
