--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ layout: page
             <td bgcolor="#D4AF37">7</td><!--20-->
             <td bgcolor="#D4AF37">7</td><!--21-->
             <td bgcolor="#D4AF37">7</td><!--22-->
-            <td></td><!--23-->
-            <td bgcolor="AFEEEE"></td><!--24-->
+            <td>4</td><!--23-->
+            <td bgcolor="AFEEEE">4</td><!--24-->
             <td bgcolor="AFEEEE"></td><!--25-->
             <td></td><!--26-->
             <td></td><!--27-->
