--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ layout: page
             <td bgcolor="#D4AF37">7</td><!--22-->
             <td>4</td><!--23-->
             <td bgcolor="AFEEEE">4</td><!--24-->
-            <td bgcolor="AFEEEE"></td><!--25-->
+            <td bgcolor="AFEEEE">5</td><!--25-->
             <td></td><!--26-->
             <td></td><!--27-->
             <td></td><!--28-->
