--- a/index.html
+++ b/index.html
@@ -121,6 +121,41 @@ layout: page
             <td>-</td><!--29-->
             <td>-</td><!--30-->
             <td>-</td><!--31-->
+            <td>76</td><!--sum/h-->
+        </tr>
+        <tr>
+            <td>March</td>
+            <td>3</td><!--1-->
+            <td></td><!--2-->
+            <td bgcolor="AFEEEE"></td><!--3-->
+            <td bgcolor="AFEEEE"></td><!--4-->
+            <td></td><!--5-->
+            <td></td><!--6-->
+            <td></td><!--7-->
+            <td></td><!--8-->
+            <td></td><!--9-->
+            <td bgcolor="AFEEEE"></td><!--10-->
+            <td bgcolor="AFEEEE"></td><!--11-->
+            <td></td><!--12-->
+            <td></td><!--13-->
+            <td></td><!--14-->
+            <td></td><!--15-->
+            <td></td><!--16-->
+            <td bgcolor="AFEEEE"></td><!--17-->
+            <td bgcolor="AFEEEE"></td><!--18-->
+            <td></td><!--19-->
+            <td></td><!--20-->
+            <td></td><!--21-->
+            <td></td><!--22-->
+            <td></td><!--23-->
+            <td bgcolor="AFEEEE"></td><!--24-->
+            <td bgcolor="AFEEEE"></td><!--25-->
+            <td></td><!--26-->
+            <td></td><!--27-->
+            <td></td><!--28-->
+            <td></td><!--29-->
+            <td></td><!--30-->
+            <td></td><!--31-->
             <td></td><!--sum/h-->
         </tr>
         </tbody>
