--- a/index.html
+++ b/index.html
@@ -127,25 +127,25 @@ layout: page
             <td>March</td>
             <td>3</td><!--1-->
             <td></td><!--2-->
-            <td bgcolor="AFEEEE"></td><!--3-->
-            <td bgcolor="AFEEEE"></td><!--4-->
-            <td></td><!--5-->
-            <td></td><!--6-->
-            <td></td><!--7-->
-            <td></td><!--8-->
-            <td></td><!--9-->
-            <td bgcolor="AFEEEE"></td><!--10-->
-            <td bgcolor="AFEEEE"></td><!--11-->
-            <td></td><!--12-->
-            <td></td><!--13-->
+            <td bgcolor="AFEEEE">3</td><!--3-->
+            <td bgcolor="AFEEEE">3</td><!--4-->
+            <td bgcolor="#D4AF37">6</td><!--5-->
+            <td bgcolor="#D4AF37">6</td><!--6-->
+            <td>4</td><!--7-->
+            <td>5</td><!--8-->
+            <td>3</td><!--9-->
+            <td bgcolor="AFEEEE">5</td><!--10-->
+            <td bgcolor="D4AF37">7</td><!--11-->
+            <td>5</td><!--12-->
+            <td bgcolor="#D4AF37">6</td><!--13-->
             <td></td><!--14-->
             <td></td><!--15-->
             <td></td><!--16-->
             <td bgcolor="AFEEEE"></td><!--17-->
-            <td bgcolor="AFEEEE"></td><!--18-->
+            <td bgcolor="AFEEEE">3</td><!--18-->
             <td></td><!--19-->
-            <td></td><!--20-->
-            <td></td><!--21-->
+            <td>3</td><!--20-->
+            <td>3</td><!--21-->
             <td></td><!--22-->
             <td></td><!--23-->
             <td bgcolor="AFEEEE"></td><!--24-->
