--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: page
     </ul>
 </div>
 <div class="row">
-    <h1>2018 (<a href="/projects/">projects</a>)</h1>
+    <h1>2018</h1>
     <table class="table">
         <tbody>
         <tr>
@@ -160,6 +160,54 @@ layout: page
         </tr>
         </tbody>
     </table>
+    <h1>Deadlines</h1>
+    <ol>
+        <li>March 31, TMI, <i>Needle localization</i> (changed deadlines: <strike>1/31, 2/28</strike> )</li>
+        <li>March 31, KTH, <i>Thesis </i> (changed deadlines: <strike>21/3</strike>)</li>
+        <li>April 7, CA, <i>AI in Cancer Imaging Review</i></li>
+        <li>April 11, MIDL, <i>Lung Nodule Malignancy</i></li>
+        <li>April 11, RSNA,<i> Lung Nodule Malignancy</i></li>
+        <li>May 18, NIPS, <i>Information Thoery</i></li>
+        <li>May 30, Clinical Oncology, <i>GBM survival</i> (changed deadlines: <strike>4/30</strike>)</li>
+        <li>May 31, <i>WIN</i></li>
+        <li>June 30, Radiology, <i>PCa diagnosis</i> (changed deadlines: <strike>3/31</strike>)</li>
+        <li>July 30, Radiology, <i>Lung Nodule Malignancy</i> (changed deadlines: <strike>5/31</strike>)</li>
+        <li>August 30, TMI, <i>RALP patient-specific models</i>(changed deadlines: <strike>6/30</strike>)</li>
+        <li>September 30, NeuroImage, <i>Brain Tumor Segmentation, CNS Extraction</i> (changed deadlines: <strike>8/31</strike>)</li>
+        <li>October 30, <i>Liver</i> </li>
+        <li>November 30, UBC, <i>PhD Thesis</i></li>
+        <li>December 31, TMI, <i>Domain Adaptation, few shots learning, MR parameters</i></li>
+        <li>December 31, UBC, <i>PhD Defence</i></li>
+    </ol>
+
+    <h1>Technical</h1>
+    <ul>
+        <li>SU</li>
+        <li>DeepInfer</li>
+        <li>PIRADS training</li>
+        <li>Prostatate PACS</li>
+    </ul>
+
+    <h1>Read & Exercises</h1>
+    <ul>
+        <li>PRML, Bishop</li>
+        <li>Introduction to Probability, Blitzstein</li>
+        <li>Linear Algebra, Strang</li>
+        <li>Information Theory, Mackay</li>
+        <li>Deep Learning, Goodfellow</li>
+    </ul>
+
+    <h1>Pet projects</h1>
+    <ul>
+        <li>Qanat</li>
+    </ul>
+
+    <h1>Learn more</h1>
+    <ul>
+        <li>Deep leanring summer school videos</li>
+        <li>Coursera Andrew Ng deep learning courses</li>
+        <li>Coursera web development courses</li>
+    </ul>
 
 </div>
 </div>
