--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ layout: page
 
 <div class="row">
     <ul>
-        <li>Devise the 6 hours plan first thing in the morning and commit to it.</li>
+        <li>Devise the 6 hours plan first thing in the morning and commit to it(<a href="/assets/weekly_plan.pdf">weekly plan sheet</a>). </li>
         <li>Track time on a paper using 30 minutes chunks.</li>
-        <li>At the end of the day, update total and project specific sheets.</li>
+        <li>At the end of the day, update total on this page.</li>
+        <li>At the end of the week, update project specific times on <a href="https://goo.gl/sFJevv">yearly plan</a>.</li>
     </ul>
 </div>
 <div class="row">
@@ -168,15 +169,14 @@ layout: page
         <li>April 11, MIDL, <i>Lung Nodule Malignancy</i></li>
         <li>April 11, RSNA,<i> Lung Nodule Malignancy</i></li>
         <li>May 18, NIPS, <i>Information Thoery</i></li>
-        <li>May 30, Clinical Oncology, <i>GBM survival</i> (changed deadlines: <strike>4/30</strike>)</li>
+        <li>May 31, Clinical Oncology, <i>GBM survival</i> (changed deadlines: <strike>4/30</strike>)</li>
         <li>May 31, <i>WIN</i></li>
-        <li>June 30, Radiology, <i>PCa diagnosis</i> (changed deadlines: <strike>3/31</strike>)</li>
-        <li>July 30, Radiology, <i>Lung Nodule Malignancy</i> (changed deadlines: <strike>5/31</strike>)</li>
-        <li>August 30, TMI, <i>RALP patient-specific models</i>(changed deadlines: <strike>6/30</strike>)</li>
-        <li>September 30, NeuroImage, <i>Brain Tumor Segmentation, CNS Extraction</i> (changed deadlines: <strike>8/31</strike>)</li>
-        <li>October 30, <i>Liver</i> </li>
+        <li>July 31, Radiology, <i>PCa diagnosis</i> (changed deadlines: <strike>3/31</strike>)</li>
+        <li>July 31, Radiology, <i>Lung Nodule Malignancy</i> (changed deadlines: <strike>5/31</strike>)</li>
+        <li>August 31, TMI, <i>RALP patient-specific models</i>(changed deadlines: <strike>6/30</strike>)</li>
+        <li>November 30, NeuroImage, <i>Brain Tumor Segmentation, CNS Extraction</i> (changed deadlines: <strike>8/31</strike>)</li>
         <li>November 30, UBC, <i>PhD Thesis</i></li>
-        <li>December 31, TMI, <i>Domain Adaptation, few shots learning, MR parameters</i></li>
+        <li>October 31, TMI, <i>Liver</i> </li>
         <li>December 31, UBC, <i>PhD Defence</i></li>
     </ol>
 
