--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@ layout: page
         <li>July 31, Radiology, <i>Lung Nodule Malignancy</i> (changed deadlines: <strike>5/31</strike>)</li>
         <li>August 31, TMI, <i>RALP patient-specific models</i>(changed deadlines: <strike>6/30</strike>)</li>
         <li>November 30, NeuroImage, <i>Brain Tumor Segmentation, CNS Extraction</i> (changed deadlines: <strike>8/31</strike>)</li>
+        <li>November 30, TBD, <i>DeepInfer Journal Paper</i></li>
         <li>November 30, UBC, <i>PhD Thesis</i></li>
         <li>October 31, TMI, <i>Liver</i> </li>
         <li>December 31, UBC, <i>PhD Defence</i></li>
