--- a/index.html
+++ b/index.html
@@ -151,10 +151,45 @@ layout: page
             <td></td><!--23-->
             <td bgcolor="AFEEEE"></td><!--24-->
             <td bgcolor="AFEEEE"></td><!--25-->
+            <td>3</td><!--26-->
+            <td></td><!--27-->
+            <td>3</td><!--28-->
+            <td>3</td><!--29-->
+            <td></td><!--30-->
+            <td bgcolor="AFEEEE">2</td><!--31-->
+            <td>48</td><!--sum/h-->
+        </tr>
+        <tr>
+            <td>April</td>
+            <td bgcolor="AFEEEE">2</td><!--1-->
+            <td></td><!--2-->
+            <td></td><!--3-->
+            <td></td><!--4-->
+            <td></td><!--5-->
+            <td ></td><!--6-->
+            <td bgcolor="AFEEEE"></td><!--7-->
+            <td bgcolor="AFEEEE"></td><!--8-->
+            <td></td><!--9-->
+            <td></td><!--10-->
+            <td></td><!--11-->
+            <td></td><!--12-->
+            <td></td><!--13-->
+            <td bgcolor="AFEEEE"></td><!--14-->
+            <td bgcolor="AFEEEE"></td><!--15-->
+            <td></td><!--16-->
+            <td></td><!--17-->
+            <td></td><!--18-->
+            <td></td><!--19-->
+            <td></td><!--20-->
+            <td bgcolor="AFEEEE"></td><!--21-->
+            <td bgcolor="AFEEEE"></td><!--22-->
+            <td></td><!--23-->
+            <td></td><!--24-->
+            <td></td><!--25-->
             <td></td><!--26-->
             <td></td><!--27-->
-            <td></td><!--28-->
-            <td></td><!--29-->
+            <td bgcolor="AFEEEE"></td><!--28-->
+            <td bgcolor="AFEEEE"></td><!--29-->
             <td></td><!--30-->
             <td></td><!--31-->
             <td></td><!--sum/h-->
