--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ layout: page
     </table>
     <h1>Deadlines</h1>
     <ol>
-        <li>March 31, TMI, <i>Needle localization</i> (changed deadlines: <strike>1/31, 2/28</strike> )</li>
+        <li><strike>March 31, TMI, <i>Needle localization</i> (changed deadlines: <strike>1/31, 2/28</strike> )</strike> Done: 4/6/18</li>
         <li>March 31, KTH, <i>Thesis </i> (changed deadlines: <strike>21/3</strike>)</li>
         <li>April 7, CA, <i>AI in Cancer Imaging Review</i></li>
         <li>April 11, MIDL, <i>Lung Nodule Malignancy</i></li>
