--- a/index.html
+++ b/index.html
@@ -198,18 +198,16 @@ layout: page
     </table>
     <h1>Deadlines</h1>
     <ol>
-        <li><strike>March 31, TMI, <i>Needle localization</i> (changed deadlines: <strike>1/31, 2/28</strike> )</strike> Done: 4/6/18</li>
+        <li><strike>March 31, TMI, <i>Needle localization</i> (changed deadlines: <strike>1/31, 2/28</strike> )</strike> done: 4/6/18</li>
         <li>March 31, KTH, <i>Thesis </i> (changed deadlines: <strike>21/3</strike>)</li>
         <li>April 7, CA, <i>AI in Cancer Imaging Review</i></li>
-        <li>April 11, MIDL, <i>Lung Nodule Malignancy</i></li>
-        <li>April 11, RSNA,<i> Lung Nodule Malignancy</i></li>
         <li>May 18, NIPS, <i>Information Thoery</i></li>
         <li>May 31, Clinical Oncology, <i>GBM survival</i> (changed deadlines: <strike>4/30</strike>)</li>
         <li>May 31, <i>WIN</i></li>
         <li>July 31, Radiology, <i>PCa diagnosis</i> (changed deadlines: <strike>3/31</strike>)</li>
-        <li>July 31, Radiology, <i>Lung Nodule Malignancy</i> (changed deadlines: <strike>5/31</strike>)</li>
         <li>August 31, TMI, <i>RALP patient-specific models</i>(changed deadlines: <strike>6/30</strike>)</li>
         <li>November 30, NeuroImage, <i>Brain Tumor Segmentation, CNS Extraction</i> (changed deadlines: <strike>8/31</strike>)</li>
+        <li>November 30, NEJM,<i> Lung Nodule Malignancy</i></li>
         <li>November 30, TBD, <i>DeepInfer Journal Paper</i></li>
         <li>November 30, UBC, <i>PhD Thesis</i></li>
         <li>October 31, TMI, <i>Liver</i> </li>
